--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ python:
   - "3.6"
 # command to install dependencies
 install: "pip install numpy"
+install: "pip install scipy"
 # command to run tests
 script: python adrsm -d ./data/genomes ./data/short_genome_list.csv
