--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: python
 python:
   - "3.6"
 # command to install dependencies
-install: "pip install numpy"
-install: "pip install scipy"
-install: "pip install requests"
+install:
+    - pip install numpy
+    - pip install scipy
+    - pip install requests
 # command to run tests
 script: python adrsm -d ./data/genomes ./data/short_genome_list.csv
