--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
     - pip install scipy
     - pip install requests
 # command to run tests
-script: python adrsm -d ./data/genomes ./data/short_genome_list.csv
+script: python adrsm -d ./data/genomes -t 1 ./data/short_genome_list.csv
