--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,9 +1,12 @@
+{% set version = "v0.9.4" %}
+
 package:
   name: adrsm
-  version: "0.9.3"
+  version: {{ version }}
 
 source:
-  path: ../
+  git_rev: {{ version }}
+  git_url: https://github.com/maxibor/adrsm.git
 
 requirements:
   run:
