--- a/conda/meta_local.yaml
+++ b/conda/meta_local.yaml
@@ -5,8 +5,7 @@ package:
   version: {{ version }}
 
 source:
-  git_rev: {{ version }}
-  git_url: https://github.com/maxibor/adrsm.git
+  path: ../
 
 requirements:
   build:
