--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "v0.9.4" %}
+{% set version = "0.9.5" %}
 
 package:
   name: adrsm
@@ -18,6 +18,7 @@ requirements:
     - scipy  >=1.3.1
     - requests >=2.22
     - click
+    - xopen
 
 
 test:
